test case: multiple ouput targets

--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <html>
   <body>
-    <script src="/build/main.js"></script>
+    <script src="/build/bundle.js"></script>
+    <script src="/build/shared.js"></script>
   </body>
 </html>
